chore: luarc updates

--- a/.config/nvim/.luarc.json
+++ b/.config/nvim/.luarc.json
@@ -3,6 +3,8 @@
     "Lua.diagnostics.globals": [
         "vim",
         "describe",
-        "require"
+        "require",
+        "pairs",
+        "ipairs"
     ]
 }
