--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+# Remap prefix key
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g mouse on
