feat: add dracula theme for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,13 +6,21 @@ bind-key C-a send-prefix
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g mouse on
+set-option -g pane-border-lines heavy
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'dracula/tmux'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
+
+# Dracula theme configuration
+set -g @dracula-show-powerline true
+set -g @dracula-plugins " "
+set -g @dracula-border-contrast true
+set -g @dracula-show-left-icon session
 
 run '~/.tmux/plugins/tpm/tpm'
