--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,10 @@ set-option -g focus-events on
 set -g mouse on
 set-option -g pane-border-lines heavy
 
+# Vi mode
+setw -g mode-keys vi
+bind 'v' copy-mode
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
