--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,12 @@ set-option -g pane-border-lines heavy
 setw -g mode-keys vi
 bind 'v' copy-mode
 
+# Rebind pane splits
+bind C-v split-window -h
+bind C-x split-window -v
+unbind '"'
+unbind %
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
