--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ bind C-x split-window -v
 unbind '"'
 unbind %
 
+# Reload config file
+bind r source-file ~/.tmux.conf
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
