--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ bind-key C-a send-prefix
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g pane-border-lines heavy
+set-option -g allow-rename off
 
 # Vi mode
 setw -g mode-keys vi
