--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,13 @@ setw -g mode-keys vi
 bind 'v' copy-mode
 
 # Rebind pane splits
-bind C-v split-window -h
-bind C-x split-window -v
+bind C-v split-window -c "#{pane_current_path}" -h
+bind C-x split-window -c "#{pane_current_path}" -v
 unbind '"'
 unbind %
+
+# Rebind window
+bind c new-window -c "#{pane_current_path}"
 
 # Reload config file
 bind r source-file ~/.tmux.conf
