refactor: open specific tmux session on alacritty startup

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,9 +1,11 @@
 shell:
-  program: /bin/zsh
+  program: /opt/homebrew/opt/tmux/bin/tmux
   args:
-    - -l
-    - -c
-    - "tmux attach || tmux"
+    - new-session
+    - -A
+    - -D
+    - -s
+    - main
 
 window:
   startup_mode: Maximized
