Revert "refactor: open specific tmux session on alacritty startup"
This reverts commit 0d9f99bdc003f633bffa81b0ef6beff04da19664.

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,11 +1,9 @@
 shell:
-  program: /opt/homebrew/opt/tmux/bin/tmux
+  program: /bin/zsh
   args:
-    - new-session
-    - -A
-    - -D
-    - -s
-    - main
+    - -l
+    - -c
+    - "tmux attach || tmux"
 
 window:
   startup_mode: Maximized
