fix: tmux resurrect/continuum config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,19 +24,23 @@ bind c new-window -c "#{pane_current_path}"
 # Reload config file
 bind r source-file ~/.tmux.conf
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'dracula/tmux'
-
+# Continuum/resurrect config
+set -g @continuum-save-interval 5
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
+set -g status-right 'Continuum status: #{continuum_status}'
 
 # Dracula theme configuration
 set -g @dracula-show-powerline true
 set -g @dracula-plugins " "
 set -g @dracula-border-contrast true
 set -g @dracula-show-left-icon session
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run '~/.tmux/plugins/tpm/tpm'
