fix(tmux): correct path for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin"
+
 # Remap prefix key
 unbind C-b
 set-option -g prefix C-a
