feat(git): add main as default branch

--- a/.config/git/.gitconfig
+++ b/.config/git/.gitconfig
@@ -10,3 +10,5 @@
   email = gustavclausen@users.noreply.github.com
 [url "ssh://git@github.com/"]
 	insteadOf = https://github.com/
+[init]
+	defaultBranch = main
