--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -26,6 +26,12 @@ bind c new-window -c "#{pane_current_path}"
 # Reload config file
 bind r source-file ~/.tmux.conf
 
+# Rebind resize
+bind -r M-k resize-pane -U 5
+bind -r M-j resize-pane -D 5
+bind -r M-h resize-pane -L 5
+bind -r M-l resize-pane -R 5
+
 # Continuum/resurrect config
 set -g @continuum-save-interval 5
 set -g @resurrect-capture-pane-contents 'on'
