--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -9,6 +9,7 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -g pane-border-lines heavy
 set-option -g allow-rename off
+set-option -g history-limit 10000
 
 # Vi mode
 setw -g mode-keys vi
