feat: add script to start/stop aws client vpn

--- a/dotbot.conf.yaml
+++ b/dotbot.conf.yaml
@@ -22,6 +22,9 @@
     ~/.bash_utilities: .config/bash/.bash_utilities
     ~/.utilities/:
       path: .config/bash/utilities/
+    ~/:
+      path: scripts/**
+      glob: true
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
